데이터전처리작업

--- a/jang/1st프로젝트_모델_소스.ipynb
+++ b/jang/1st프로젝트_모델_소스.ipynb
@@ -14,7 +14,9 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "95fdf060",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "ename": "FileNotFoundError",
@@ -66,7 +68,7 @@
    "execution_count": 5,
    "id": "80861b3b",
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -174,7 +176,9 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "d8b40a8f",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -270,7 +274,7 @@
    "execution_count": 3,
    "id": "03476551",
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -468,7 +472,7 @@
    "execution_count": 11,
    "id": "96962ba4",
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
@@ -661,9 +665,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "id": "a0536b53",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -703,8 +709,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14:48:05 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:48:05 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "16:25:09 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "16:25:09 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -752,8 +758,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14:48:12 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:48:13 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "16:25:17 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "16:25:17 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -801,8 +807,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14:48:20 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:48:20 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "16:25:24 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "16:25:24 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -850,8 +856,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14:48:27 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:48:27 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "16:25:30 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "16:25:30 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -899,8 +905,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14:48:34 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:48:34 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "16:25:38 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "16:25:38 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -948,8 +954,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "14:48:42 - cmdstanpy - INFO - Chain [1] start processing\n",
-      "14:48:42 - cmdstanpy - INFO - Chain [1] done processing\n"
+      "16:25:45 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "16:25:45 - cmdstanpy - INFO - Chain [1] done processing\n"
      ]
     },
     {
@@ -984,7 +990,7 @@
     "선택_국적 = input(\"예측할 국적 입력 (전체 예측 원하면 Enter): \").strip()\n",
     "선택_목적 = input(\"예측할 목적 입력 (전체 예측 원하면 Enter): \").strip()\n",
     "\n",
-    "df = pd.read_csv('../1stProject/data/목적별_국적별_입국_(05년1월~25년5월).csv', encoding='cp949')\n",
+    "df = pd.read_csv('data/목적별_국적별_입국_(05년1월~25년5월).csv', encoding='cp949')\n",
     "if '구분' in df.columns:\n",
     "    df = df[df['구분'] == '합계']\n",
     "    df = df.drop(columns=['구분'])\n",
@@ -1156,9 +1162,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "project",
+   "display_name": "han",
    "language": "python",
-   "name": "project"
+   "name": "han"
   },
   "language_info": {
    "codemirror_mode": {
