--- a/jang/1st프로젝트_테스트.ipynb
+++ b/jang/1st프로젝트_테스트.ipynb
@@ -2,6 +2,57 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "68f49e6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<style>\n",
+       "div.container{width:90% !important;}\n",
+       "div.cell.code_cell.rendered{width:100%;}\n",
+       "div.input_prompt{padding:2px;}\n",
+       "div.CodeMirror {font-family:Consolas; font-size:10pt;}\n",
+       "div.text_cell_render.rendered_html{font-size:10pt;}\n",
+       "div.output {font-size:10pt; font-weight:bold;}\n",
+       "div.input {font-family:Consolas; font-size:10pt;}\n",
+       "div.prompt {min-width:70px;}\n",
+       "div#toc-wrapper{padding-top:120px;}\n",
+       "div.text_cell_render ul li{font-size:11pt;padding:4px;}\n",
+       "table.dataframe{font-size:10px;}\n",
+       "</style>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display, HTML\n",
+    "display(HTML(\"\"\"\n",
+    "<style>\n",
+    "div.container{width:90% !important;}\n",
+    "div.cell.code_cell.rendered{width:100%;}\n",
+    "div.input_prompt{padding:2px;}\n",
+    "div.CodeMirror {font-family:Consolas; font-size:10pt;}\n",
+    "div.text_cell_render.rendered_html{font-size:10pt;}\n",
+    "div.output {font-size:10pt; font-weight:bold;}\n",
+    "div.input {font-family:Consolas; font-size:10pt;}\n",
+    "div.prompt {min-width:70px;}\n",
+    "div#toc-wrapper{padding-top:120px;}\n",
+    "div.text_cell_render ul li{font-size:11pt;padding:4px;}\n",
+    "table.dataframe{font-size:10px;}\n",
+    "</style>\n",
+    "\"\"\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "dca7513c",
    "metadata": {},
@@ -10,7 +61,7 @@
     "import pandas as pd\n",
     "\n",
     "# CSV 파일 불러오기\n",
-    "df = pd.read_csv(\"./data/목적별 국적별 입국_250708124220.csv\")\n",
+    "df = pd.read_csv(\"../han/목적별_국적별_입국.csv\")\n",
     "\n",
     "# \"소 계\" 포함된 행 제거\n",
     "df_cleaned = df[~df.apply(lambda row: row.astype(str).str.contains(\"소 계\").any(), axis=1)]\n",
